Updated README and added linux install script